// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SideNavbar display and logic > renders 1`] = `
.c4.btn {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0.4rem 1.2rem;
  border: 0.2rem solid transparent;
  border-radius: 0.4rem;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 1.8rem;
  font-family: 'BCSans','Noto Sans',Verdana,Arial,sans-serif;
  font-weight: 700;
  -webkit-letter-spacing: 0.1rem;
  -moz-letter-spacing: 0.1rem;
  -ms-letter-spacing: 0.1rem;
  letter-spacing: 0.1rem;
  cursor: pointer;
}

.c4.btn .Button__value {
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
}

.c4.btn:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  opacity: 0.8;
}

.c4.btn:focus {
  outline-width: 2px;
  outline-style: solid;
  outline-color: #2E5DD7;
  outline-offset: 2px;
  box-shadow: none;
}

.c4.btn.btn-primary {
  color: #FFFFFF;
  background-color: #013366;
}

.c4.btn.btn-primary:hover,
.c4.btn.btn-primary:active,
.c4.btn.btn-primary:focus {
  background-color: #1E5189;
}

.c4.btn.btn-secondary {
  color: #013366;
  background: none;
  border-color: #013366;
}

.c4.btn.btn-secondary:hover,
.c4.btn.btn-secondary:active,
.c4.btn.btn-secondary:focus {
  color: #FFFFFF;
  background-color: #013366;
}

.c4.btn.btn-info {
  color: #9F9D9C;
  border: none;
  background: none;
  padding-left: 0.6rem;
  padding-right: 0.6rem;
}

.c4.btn.btn-info:hover,
.c4.btn.btn-info:active,
.c4.btn.btn-info:focus {
  color: var(--surface-color-primary-button-hover);
  background: none;
}

.c4.btn.btn-light {
  color: #FFFFFF;
  background-color: #606060;
  border: none;
}

.c4.btn.btn-light:hover,
.c4.btn.btn-light:active,
.c4.btn.btn-light:focus {
  color: #FFFFFF;
  background-color: #606060;
}

.c4.btn.btn-dark {
  color: #FFFFFF;
  background-color: #474543;
  border: none;
}

.c4.btn.btn-dark:hover,
.c4.btn.btn-dark:active,
.c4.btn.btn-dark:focus {
  color: #FFFFFF;
  background-color: #474543;
}

.c4.btn.btn-danger {
  color: #FFFFFF;
  background-color: #CE3E39;
}

.c4.btn.btn-danger:hover,
.c4.btn.btn-danger:active,
.c4.btn.btn-danger:focus {
  color: #FFFFFF;
  background-color: #CE3E39;
}

.c4.btn.btn-warning {
  color: #FFFFFF;
  background-color: #FCBA19;
  border-color: #FCBA19;
}

.c4.btn.btn-warning:hover,
.c4.btn.btn-warning:active,
.c4.btn.btn-warning:focus {
  color: #FFFFFF;
  border-color: #FCBA19;
  background-color: #FCBA19;
}

.c4.btn.btn-link {
  font-size: 1.6rem;
  font-weight: 400;
  color: var(--surface-color-primary-button-default);
  background: none;
  border: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: 2.5rem;
  line-height: 3rem;
  -webkit-box-pack: left;
  -webkit-justify-content: left;
  -ms-flex-pack: left;
  justify-content: left;
  -webkit-letter-spacing: unset;
  -moz-letter-spacing: unset;
  -ms-letter-spacing: unset;
  letter-spacing: unset;
  text-align: left;
  padding: 0;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c4.btn.btn-link:hover,
.c4.btn.btn-link:active,
.c4.btn.btn-link:focus {
  color: var(--surface-color-primary-button-hover);
  -webkit-text-decoration: underline;
  text-decoration: underline;
  border: none;
  background: none;
  box-shadow: none;
  outline: none;
}

.c4.btn.btn-link:disabled,
.c4.btn.btn-link.disabled {
  color: #9F9D9C;
  background: none;
  pointer-events: none;
}

.c4.btn:disabled,
.c4.btn:disabled:hover {
  color: #9F9D9C;
  background-color: #EDEBE9;
  box-shadow: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  pointer-events: none;
  cursor: not-allowed;
}

.c4.Button .Button__icon {
  margin-right: 1.6rem;
}

.c4.Button--icon-only:focus {
  outline: none;
}

.c4.Button--icon-only .Button__icon {
  margin-right: 0;
}

.c5.btn.btn-light.Button {
  padding: 0;
  border: 0.1rem solid #9F9D9C;
  background-color: white;
  color: #474543;
}

.c5.btn.btn-light.Button:focus,
.c5.btn.btn-light.Button:active {
  background-color: white;
  color: #474543;
}

.c5.btn,
.c5 .Button__icon,
.c5 svg {
  max-width: 2.4rem;
  min-width: 2.4rem;
  max-height: 2.4rem;
  min-height: 2.4rem;
  font-size: 1.4rem;
}

.c1 {
  height: 100%;
  overflow-y: auto;
  overflow-x: hidden;
  padding-top: 1.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  grid-area: iconbar;
  background-color: #003366;
  -webkit-transition: 0.5s width;
  transition: 0.5s width;
  width: 6rem;
}

.c1 label {
  color: white;
  min-width: 8rem;
}

.c1.expanded {
  width: 16rem;
}

.c1 .nav-item svg {
  min-width: 2.4rem;
}

.c1 .to-bottom {
  margin-top: auto;
  margin-bottom: 1.6rem;
}

.c1 .nav-link {
  padding: 0.8rem 1.6rem;
}

.c0 {
  z-index: 1000;
  position: relative;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 100%;
}

.c7 a {
  font-size: 1.7rem;
}

.c6 {
  height: 100%;
  overflow-y: auto;
  position: absolute;
  top: 0;
  right: 0;
  background-color: white;
  z-index: -1;
  width: 64rem;
  padding: 0.8rem 1.6rem;
  text-align: left;
  -webkit-transition: -webkit-transform 0.3s ease-in-out;
  -webkit-transition: transform 0.3s ease-in-out;
  transition: transform 0.3s ease-in-out;
  box-shadow: 0.3rem 0 0.4rem rgba(0,0,0,0.2);
}

.c6.show {
  -webkit-transform: translateX(64rem);
  -ms-transform: translateX(64rem);
  transform: translateX(64rem);
}

.c2 {
  width: 100%;
  margin-bottom: 2rem;
  fill: #f2f2f2;
}

.c2:hover label {
  color: #8ec6ff;
}

.c2:hover svg {
  fill: #8ec6ff;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3 svg {
  fill: white;
  min-width: -webkit-max-content;
  min-width: -moz-max-content;
  min-width: max-content;
}

.c3.active svg {
  fill: #fdb913;
}

@media (max-width:1225px) {
  .c6 {
    width: 32rem;
  }

  .c6.show {
    -webkit-transform: translateX(32rem);
    -ms-transform: translateX(32rem);
    transform: translateX(32rem);
  }
}

<div>
  <div
    class="Toastify"
  />
  <div />
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2 nav-item"
        data-testid="nav-tooltip-mapview"
      >
        <a
          class="c3 nav-link"
          href="#"
          role="button"
        >
          <svg
            fill="none"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 12.6826C10.7569 12.6826 9.75 13.6907 9.75 14.9326C9.75 16.1746 10.7569 17.1826 12 17.1826C13.2431 17.1826 14.25 16.1746 14.25 14.9326C14.25 13.6907 13.2431 12.6826 12 12.6826Z"
            />
            <path
              d="M12.1725 0L0 12.825L3.075 12.7725V24H20.925V12.54L24 12.4875L12.1725 0ZM12.375 24C12 24 11.625 24 11.625 24C7.65 18.18 6.75 17.1375 6.75 15C6.75 12.0675 9.0975 9.6975 12 9.6975C14.9025 9.6975 17.25 12.075 17.25 15C17.25 17.1375 16.35 18.18 12.375 24Z"
            />
          </svg>
        </a>
      </div>
      <div
        class="c2 nav-item"
        data-testid="nav-tooltip-project"
      >
        <a
          class="c3 nav-link"
          href="#"
          role="button"
        >
          <svg
            fill="none"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M24 14.3972H15V15.9905C15 16.8726 14.3333 17.5839 13.5067 17.5839H10.5067C9.68 17.5839 9.01333 16.8726 9.01333 15.9905V14.3972H0V20.7991C0 22.5631 1.34667 24 3 24H21C22.6533 24 24 22.5631 24 20.7991V14.3972ZM6 2.8026V4.80853H3C1.34667 4.80853 0 6.2454 0 8.00948V12.018H24V8.00948C24 6.2454 22.6533 4.80853 21 4.80853H18V2.8026C18 1.25192 16.8267 0 15.3733 0H8.62667C7.17333 0 6 1.25192 6 2.8026ZM8.62667 2.40427H15.3733C15.5733 2.40427 15.7467 2.58921 15.7467 2.8026V4.80853H8.25333V2.8026C8.25333 2.58921 8.42667 2.40427 8.62667 2.40427Z"
            />
          </svg>
        </a>
      </div>
      <div
        class="c2 nav-item"
        data-testid="nav-tooltip-research"
      >
        <a
          class="c3 nav-link"
          href="#"
          role="button"
        >
          <svg
            fill="none"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19.2118 13.0611H4.80296V10.1458H19.2118V13.0611ZM14.4089 19.7098H4.80296V16.7765H14.4089V19.7098ZM21.6059 4.75623H16.803H12L9.60591 0H2.39409C0 0 0 3.1546 0 4.75623V21.0847C0 22.6863 1.06404 24 2.39409 24H21.6059C22.9212 24 24 22.6863 24 21.0847V7.67157C24 6.06993 22.9212 4.75623 21.6059 4.75623Z"
            />
          </svg>
        </a>
      </div>
      <div
        class="c2 nav-item"
        data-testid="nav-tooltip-leases&licences"
      >
        <a
          class="c3 nav-link"
          href="#"
          role="button"
        >
          <svg
            fill="none"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M18.6667 15H16V12H18.6667V15ZM18.6667 21H16V18H18.6667V21ZM5.33333 18H8V21H5.33333V18ZM5.33333 12H8V15H5.33333V12ZM5.33333 5.72331L6.66667 4.22329L7.45333 5.11164L8 5.72331V8.98544H5.33333V5.72331ZM13.3333 18V21H10.6667V18H13.3333ZM10.6667 15V12H13.3333V15H10.6667ZM12 4.22329L12.7867 5.11164L13.3333 5.72331V8.98544H10.6667V5.72331L11.2133 5.11164L12 4.22329ZM17.3333 4.22329L18.6667 5.72331V8.98544H16V5.72331L16.5467 5.11164L17.3333 4.22329ZM24 12V9.00001H21.3333V4.5L17.3333 0L14.6667 3L12 0L9.33333 3L6.66667 0L2.66667 4.5V9.00001H0V12H2.66667V15H0V18H2.66667V24H21.3333V18H24V15H21.3333V12H24Z"
            />
          </svg>
        </a>
      </div>
      <span
        class="to-bottom"
      >
        <button
          class="c4 Button Button--icon-only c5 btn btn-light"
          title="expand"
          type="button"
        >
          <div
            class="Button__icon"
          >
            <svg
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M6.41 6 5 7.41 9.58 12 5 16.59 6.41 18l6-6z"
              />
              <path
                d="m13 6-1.41 1.41L16.17 12l-4.58 4.59L13 18l6-6z"
              />
            </svg>
          </div>
        </button>
      </span>
    </div>
    <div
      class="c6"
      data-testid="side-tray"
    >
      <div
        class="c7"
      />
    </div>
  </div>
</div>
`;

exports[`SideNavbar display and logic > renders 2`] = `
.c4.btn {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0.4rem 1.2rem;
  border: 0.2rem solid transparent;
  border-radius: 0.4rem;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 1.8rem;
  font-family: 'BCSans','Noto Sans',Verdana,Arial,sans-serif;
  font-weight: 700;
  -webkit-letter-spacing: 0.1rem;
  -moz-letter-spacing: 0.1rem;
  -ms-letter-spacing: 0.1rem;
  letter-spacing: 0.1rem;
  cursor: pointer;
}

.c4.btn .Button__value {
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
}

.c4.btn:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  opacity: 0.8;
}

.c4.btn:focus {
  outline-width: 2px;
  outline-style: solid;
  outline-color: #2E5DD7;
  outline-offset: 2px;
  box-shadow: none;
}

.c4.btn.btn-primary {
  color: #FFFFFF;
  background-color: #013366;
}

.c4.btn.btn-primary:hover,
.c4.btn.btn-primary:active,
.c4.btn.btn-primary:focus {
  background-color: #1E5189;
}

.c4.btn.btn-secondary {
  color: #013366;
  background: none;
  border-color: #013366;
}

.c4.btn.btn-secondary:hover,
.c4.btn.btn-secondary:active,
.c4.btn.btn-secondary:focus {
  color: #FFFFFF;
  background-color: #013366;
}

.c4.btn.btn-info {
  color: #9F9D9C;
  border: none;
  background: none;
  padding-left: 0.6rem;
  padding-right: 0.6rem;
}

.c4.btn.btn-info:hover,
.c4.btn.btn-info:active,
.c4.btn.btn-info:focus {
  color: var(--surface-color-primary-button-hover);
  background: none;
}

.c4.btn.btn-light {
  color: #FFFFFF;
  background-color: #606060;
  border: none;
}

.c4.btn.btn-light:hover,
.c4.btn.btn-light:active,
.c4.btn.btn-light:focus {
  color: #FFFFFF;
  background-color: #606060;
}

.c4.btn.btn-dark {
  color: #FFFFFF;
  background-color: #474543;
  border: none;
}

.c4.btn.btn-dark:hover,
.c4.btn.btn-dark:active,
.c4.btn.btn-dark:focus {
  color: #FFFFFF;
  background-color: #474543;
}

.c4.btn.btn-danger {
  color: #FFFFFF;
  background-color: #CE3E39;
}

.c4.btn.btn-danger:hover,
.c4.btn.btn-danger:active,
.c4.btn.btn-danger:focus {
  color: #FFFFFF;
  background-color: #CE3E39;
}

.c4.btn.btn-warning {
  color: #FFFFFF;
  background-color: #FCBA19;
  border-color: #FCBA19;
}

.c4.btn.btn-warning:hover,
.c4.btn.btn-warning:active,
.c4.btn.btn-warning:focus {
  color: #FFFFFF;
  border-color: #FCBA19;
  background-color: #FCBA19;
}

.c4.btn.btn-link {
  font-size: 1.6rem;
  font-weight: 400;
  color: var(--surface-color-primary-button-default);
  background: none;
  border: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: 2.5rem;
  line-height: 3rem;
  -webkit-box-pack: left;
  -webkit-justify-content: left;
  -ms-flex-pack: left;
  justify-content: left;
  -webkit-letter-spacing: unset;
  -moz-letter-spacing: unset;
  -ms-letter-spacing: unset;
  letter-spacing: unset;
  text-align: left;
  padding: 0;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c4.btn.btn-link:hover,
.c4.btn.btn-link:active,
.c4.btn.btn-link:focus {
  color: var(--surface-color-primary-button-hover);
  -webkit-text-decoration: underline;
  text-decoration: underline;
  border: none;
  background: none;
  box-shadow: none;
  outline: none;
}

.c4.btn.btn-link:disabled,
.c4.btn.btn-link.disabled {
  color: #9F9D9C;
  background: none;
  pointer-events: none;
}

.c4.btn:disabled,
.c4.btn:disabled:hover {
  color: #9F9D9C;
  background-color: #EDEBE9;
  box-shadow: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  pointer-events: none;
  cursor: not-allowed;
}

.c4.Button .Button__icon {
  margin-right: 1.6rem;
}

.c4.Button--icon-only:focus {
  outline: none;
}

.c4.Button--icon-only .Button__icon {
  margin-right: 0;
}

.c5.btn.btn-light.Button {
  padding: 0;
  border: 0.1rem solid #9F9D9C;
  background-color: white;
  color: #474543;
}

.c5.btn.btn-light.Button:focus,
.c5.btn.btn-light.Button:active {
  background-color: white;
  color: #474543;
}

.c5.btn,
.c5 .Button__icon,
.c5 svg {
  max-width: 2.4rem;
  min-width: 2.4rem;
  max-height: 2.4rem;
  min-height: 2.4rem;
  font-size: 1.4rem;
}

.c1 {
  height: calc( 100vh - 7.2rem - 4.4rem );
  overflow-y: auto;
  overflow-x: hidden;
  padding-top: 1.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  grid-area: iconbar;
  background-color: #003366;
  -webkit-transition: 0.5s width;
  transition: 0.5s width;
  width: 6rem;
}

.c1 label {
  color: white;
  min-width: 8rem;
}

.c1.expanded {
  width: 16rem;
}

.c1 .nav-item svg {
  min-width: 2.4rem;
}

.c1 .to-bottom {
  margin-top: auto;
  margin-bottom: 1.6rem;
}

.c1 .nav-link {
  padding: 0.8rem 1.6rem;
}

.c0 {
  z-index: 1000;
  position: relative;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 100%;
}

.c7 a {
  font-size: 1.7rem;
}

.c6 {
  height: 100%;
  overflow-y: auto;
  position: absolute;
  top: 0;
  right: 0;
  background-color: white;
  z-index: -1;
  width: 64rem;
  padding: 0.8rem 1.6rem;
  text-align: left;
  -webkit-transition: -webkit-transform 0.3s ease-in-out;
  -webkit-transition: transform 0.3s ease-in-out;
  transition: transform 0.3s ease-in-out;
  box-shadow: 0.3rem 0 0.4rem rgba(0,0,0,0.2);
}

.c6.show {
  -webkit-transform: translateX(64rem);
  -ms-transform: translateX(64rem);
  transform: translateX(64rem);
}

.c2 {
  width: 100%;
  margin-bottom: 2rem;
  fill: #f2f2f2;
}

.c2:hover label {
  color: #8ec6ff;
}

.c2:hover svg {
  fill: #8ec6ff;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3 svg {
  fill: white;
  min-width: -webkit-max-content;
  min-width: -moz-max-content;
  min-width: max-content;
}

.c3.active svg {
  fill: #fdb913;
}

@media (max-width:1225px) {
  .c6 {
    width: 32rem;
  }

  .c6.show {
    -webkit-transform: translateX(32rem);
    -ms-transform: translateX(32rem);
    transform: translateX(32rem);
  }
}

<div>
  <div
    class="Toastify"
  />
  <div />
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2 nav-item"
        data-testid="nav-tooltip-mapview"
      >
        <a
          class="c3 nav-link"
          href="#"
          role="button"
        >
          <svg
            fill="none"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 12.6826C10.7569 12.6826 9.75 13.6907 9.75 14.9326C9.75 16.1746 10.7569 17.1826 12 17.1826C13.2431 17.1826 14.25 16.1746 14.25 14.9326C14.25 13.6907 13.2431 12.6826 12 12.6826Z"
            />
            <path
              d="M12.1725 0L0 12.825L3.075 12.7725V24H20.925V12.54L24 12.4875L12.1725 0ZM12.375 24C12 24 11.625 24 11.625 24C7.65 18.18 6.75 17.1375 6.75 15C6.75 12.0675 9.0975 9.6975 12 9.6975C14.9025 9.6975 17.25 12.075 17.25 15C17.25 17.1375 16.35 18.18 12.375 24Z"
            />
          </svg>
        </a>
      </div>
      <span
        class="to-bottom"
      >
        <button
          class="c4 Button Button--icon-only c5 btn btn-light"
          title="expand"
          type="button"
        >
          <div
            class="Button__icon"
          >
            <svg
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M6.41 6 5 7.41 9.58 12 5 16.59 6.41 18l6-6z"
              />
              <path
                d="m13 6-1.41 1.41L16.17 12l-4.58 4.59L13 18l6-6z"
              />
            </svg>
          </div>
        </button>
      </span>
    </div>
    <div
      class="c6"
      data-testid="side-tray"
    >
      <div
        class="c7"
      />
    </div>
  </div>
</div>
`;
